scripts/nullaway/original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8.txt
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:24: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		super(name, null);
		            ^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.subConfiguration = null;
		                      ^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:111: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.portsRequis.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:115: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.portsFourni.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:128: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:140: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:154: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return parentConfig;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:173: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return a;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:187: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return a;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:205: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return b;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:220: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return b;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:242: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return b;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:257: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return b;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Element.java:10: error: [NullAway] initializer method does not guarantee @NonNull field subConfiguration (line 7) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Element(String name, Element parent) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Composant.java:41: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.portsR.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Composant.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.portsF.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Composant.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.servicesR.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Composant.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.servicesF.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Connecteur.java:48: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.rolesF.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Connecteur.java:52: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.rolesT.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields sideA (line 7), sideB (line 8) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Attachment(String name) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Binding.java:13: error: [NullAway] initializer method does not guarantee @NonNull fields sideA (line 8), sideB (line 9) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Binding(String name) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Binding.java:69: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Glue.java:20: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.connection.get(rf);
		^
    (see http://t.uber.com/nullaway )
25 errors
